<resources>
    <string name="app_name">TracStock</string>
    <string name="stock_logo_description">Stock company logo or placeholder</string>
    <string name="title_explore">Explore</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search here...</string>
    <string name="top_gainers_title">Top Gainers</string>
    <string name="top_losers_title">Top Losers</string>
    <string name="view_all">View All</string>
    <string name="no_search_results">No matching stocks found.</string>
    <string name="error_loading_data">Error loading data. Please try again.</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="historical_price_chart">Historical Price Chart</string>
    <string name="company_overview">Company Overview</string>
    <string name="sector_label">Sector:</string>
    <string name="industry_label">Industry:</string>
    <string name="market_cap_label">Market Capitalization:</string>
    <string name="pe_ratio_label">P/E Ratio (TTM):</string>
    <string name="dividend_yield_label">Dividend Yield:</string>
    <string name="week_high_label">52 Week High:</string>
    <string name="week_low_label">52 Week Low:</string>
    <string name="error_loading_chart_data">Failed to load chart data.</string>
    <string name="error_loading_details">Failed to load company details.</string>
    <string name="add_watchlist">Add Watchlist</string>
    <string name="empty_watchlist_title">No Watchlists Yet</string>
    <string name="empty_watchlist_message">Create your first watchlist to organize your favorite stocks!</string>
    <string name="empty_watchlist_icon">Empty watchlist icon</string>
    <string name="create_watchlist">Create Watchlist</string>
    <string name="delete_watchlist">Delete Watchlist</string>
    <string name="watchlist_created_success">Watchlist "%s" created successfully!</string>
    <string name="watchlist_creation_failed">Failed to create watchlist: %s</string>
    <string name="watchlist_deleted_success">Watchlist deleted successfully!</string>
    <string name="watchlist_deletion_failed">Failed to delete watchlist: %s</string>
    <string name="confirm_delete_watchlist_title">Delete Watchlist?</string>
    <string name="confirm_delete_watchlist_message">Are you sure you want to delete "%s"? All stocks in this watchlist will also be removed.</string>
    <string name="dialog_positive_button_text">Yes</string>
    <string name="dialog_negative_button_text">No</string>
    <string name="watchlist_stock_count">%d stocks</string>
    <string name="no_stocks_in_watchlist">No stocks</string>
    <string name="dialog_create_watchlist_title">Create New Watchlist</string>
    <string name="new_watchlist_name_label">New Watchlist Name</string>
    <string name="watchlist_name_hint">e.g., Tech Favorites, My Portfolio</string>
    <string name="create_watchlist_button">Create Watchlist</string>
    <string name="or_text">OR</string>
    <string name="select_existing_watchlist_label">Select Existing Watchlist</string>
    <string name="select_watchlist_hint">Choose a watchlist</string>
    <string name="add_to_selected_watchlist">Add to Selected Watchlist</string>
    <string name="stock_added_to_watchlist_success">Successfully added %s to watchlist.</string>
    <string name="stock_already_in_watchlist">Stock %s is already in this watchlist.</string>
    <string name="add_to_watchlist_dialog_title">Add to Watchlist</string>
    <string name="empty_watchlist_stocks_title">No Stocks in Watchlist</string>
    <string name="empty_watchlist_stocks_message">Add stocks from the Explore screen to this watchlist.</string>
    <string name="stock_removed_from_watchlist">Removed %s from watchlist.</string>
    <string name="failed_to_remove_stock">Failed to remove stock: %s</string>
    <string name="confirm_remove_stock_title">Remove Stock?</string>
    <string name="confirm_remove_stock_message">Are you sure you want to remove %s from this watchlist?</string>
    <string name="error_loading_stocks">Failed to load stocks. Please try again.</string>
    <string name="category_top_gainers">Top Gainers</string>
    <string name="category_top_losers">Top Losers</string>
</resources>